--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,3 @@
-<%- include('partials/header') -%>
 <div class="container mt-5">
     <table class="table  table-bordered" id="dataTable" width="100%" cellspacing="0">
         <thead>
@@ -6,26 +5,24 @@
                 <th>Code</th>
                 <th>Description</th>
                 <th>Price</th>
-                <th>Operations</th>
             </tr>
         </thead>
+
         <tbody>
-            <% Products.ForEach((Product)=> { %>
-            <tr>
-                <td><%= Product.code %></td>
-                <td><%= Product.description %></td>
-                <td><%= Product.price %></td>
-            </tr>
-       <% }) %>
+            <% products.forEach(product => { %>
+                <tr>
+                    <td>
+                        <%= product.code %>
+                    </td>
+                    <td>
+                        <%= product.description %>
+                    </td>
+                    <td>
+                        <%= product.price %>
+                    </td>
+                </tr>
+                <% }) %>
         </tbody>
-        <tfoot>
-            <tr>
-                <th>Code</th>
-                <th>Description</th>
-                <th>Price</th>
-                <th>Operations</th>
-            </tr>
-        </tfoot>
+
     </table>
 </div>
-<%- include('partials/footer') -%>
