--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <title>Product Database System</title>
@@ -22,7 +23,7 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav m-lg-auto">
                     <a class="nav-link active" aria-current="page" href="index">Home</a>
-                    <a class="nav-link" href="new">Add Product</a>
+                    <a class="nav-link" href="../new">Add Product</a>
                     <a class="nav-link" href="search">Search</a>
                 </div>
             </div>
