lien home fonctionnel

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -22,7 +22,7 @@
           </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav m-lg-auto">
-                    <a class="nav-link active" aria-current="page" href="index">Home</a>
+                    <a class="nav-link active" aria-current="page" href="/">Home</a>
                     <a class="nav-link" href="/product/new">Add Product</a>
                     <a class="nav-link" href="search">Search</a>
                 </div>
