--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,4 +1,4 @@
-<form action="" method="post" style="width: 50%; margin:auto"><br><br><br>
+<form action="" method="get" style="width: 50%; margin:auto"><br><br><br>
     <h2>Search Product</h2>
     <input class="form-control" type="text" placeholder="Product Code">
     <button style="background-color: aqua;" class="form-control" type="submit">Search in Database</button>
