--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -24,7 +24,7 @@
                 <div class="navbar-nav m-lg-auto">
                     <a class="nav-link active" aria-current="page" href="/">Home</a>
                     <a class="nav-link" href="/product/new">Add Product</a>
-                    <a class="nav-link" href="search">Search</a>
+                    <a class="nav-link" href="/search/">Search</a>
                 </div>
             </div>
         </div>
