Modification du footer

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,13 +29,13 @@
                 </tr>
                 <% }) %>
         </tbody>
-        <thead>
+        <tfoot>
             <tr>
                 <th>Code</th>
                 <th>Description</th>
                 <th>Price</th>
                 <th>Operations</th>
             </tr>
-        </thead>
+        </tfoot>
     </table>
 </div>
