--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Product Database System</title>
-    <link rel="stylesheet" href="/libs/bootstrap.css">
+
+    <link rel="stylesheet" type="text/css" href="/libs/bootstrap.css">
     <link rel="stylesheet" href="/libs/dataTables.bootstrap4.min.css">
-    <link rel="stylesheet" href="/stylesheets/design.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/design.css">
 
     <script src="/libs/jquery.min.js"></script>
     <script src="/libs/dataTables.bootstrap4.min.js"></script>
