--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,6 +1,8 @@
-<form action="" method="get" style="width: 50%; margin:auto"><br><br><br>
+<form action="/search/" method="get" style="width: 50%; margin:auto"><br><br><br>
     <h2>Search Product</h2>
-    <input class="form-control" type="text" placeholder="Product Code">
+    <input class="form-control" value="" name="code" id="code" type="text" placeholder="Product Code">
     <button style="background-color: aqua;" class="form-control" type="submit">Search in Database</button>
 </form>
+<div>
+
 </div>
