--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -22,7 +22,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav m-lg-auto">
+                <div class="navbar-nav ml-auto">
                     <a class="nav-link active" aria-current="page" href="/">Home</a>
                     <a class="nav-link" href="/product/new">Add Product</a>
                     <a class="nav-link" href="/search/">Search</a>
