--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,17 +15,17 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-success">
+    <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-info">
         <div class="container-fluid">
-            <a class="navbar-brand">Product Database System</a>
+            <a class="navbar-brand text-white">Product Database System</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav ml-auto">
-                    <a class="nav-link active" aria-current="page" href="/">Home</a>
-                    <a class="nav-link" href="/product/new">Add Product</a>
-                    <a class="nav-link" href="/search">Search</a>
+                    <a class="nav-link text-white" aria-current="page" href="/">Home</a>
+                    <a class="nav-link text-white" href="/product/new">Add Product</a>
+                    <a class="nav-link text-white" href="/search">Search</a>
                 </div>
             </div>
         </div>
