Correction CSS aspect formulaires

--- a/views/new.ejs
+++ b/views/new.ejs
@@ -4,6 +4,6 @@
         <input name="code" value="<%= product.code %>" type="text" id="code" class="form-control" placeholder="Product code">
         <input name="description" value="<%= product.description %>" type="text" id="description" class="form-control" placeholder="Product description">
         <input name="price" value="<%= product.price %>" type="text" id="price" class="form-control" placeholder="Product price">
-        <button style="background-color: aqua;" class="form-control" type="submit">Add to Database</button>
+        <button class="form-control btn btn-info" type="submit">Add to Database</button>
     </form>
 </div>
