--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -4,6 +4,6 @@
         <input name="code" value="<%= product.code %>" type="text" id="code" class="form-control" placeholder="<%= product.code %>">
         <input name="description" value="<%= product.description %>" type="text" id="description" class="form-control" placeholder="<%= product.description %>">
         <input name="price" value="<%= product.price %>" type="text" id="price" class="form-control" placeholder="<%= product.price %>">
-        <button style="background-color: aqua;" class="form-control" type="submit">Update Product</button>
+        <button class="form-control btn btn-info" type="submit">Update Product</button>
     </form>
 </div>
