--- a/views/search.ejs
+++ b/views/search.ejs
@@ -2,7 +2,7 @@
     <form action="/search" method="post" style="width: 50%; margin:auto"><br><br><br>
         <h2>Search Product</h2>
         <input class="form-control" name="code" id="code" type="text" placeholder="Product Code ">
-        <button style="background-color: aqua;" class="form-control" type="submit">Search in Database</button>
+        <button class="form-control btn btn-info" type="submit">Search in Database</button>
     </form>
 </div>
 <div>
