--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,15 +1,18 @@
-<div>
-    <form action="/search" method="post" style="width: 50%; margin:auto"><br><br><br>
+<div id="search">
+    <form action="/giveResult" method="get" style="width: 50%; margin:auto"><br><br><br>
         <h2>Search Product</h2>
         <input class="form-control" name="code" id="code" type="text" placeholder="Product Code ">
+        <br>
         <button style="background-color: aqua;" class="form-control" type="submit">Search in Database</button>
     </form>
 </div>
+<br>
 <div>
     <%- include("partials/messages") -%>
 </div>
-<% if(product) {%>
+<% if(!!product) {%>
     <div class="container mt-5 ">
+        <strong>Search results:</strong>
         <table class="table table-bordered " width="100% " cellspacing="0 ">
             <thead>
                 <tr>
@@ -27,7 +30,7 @@
                         <%= product.description %>
                     </td>
                     <td>
-                        <%= product.price %>
+                        <%= product.price %> $
                     </td>
                 </tr>
             </tbody>
